# plotter

./: AGENTS.md  Cargo.toml  README.md  encode.sh  play.sh  rustfmt.toml
mini-tools/: city.html  shading.html  zsnes.html
src/: audio_sync.rs  buffer.rs  camera.rs  duration_extras.rs  eq.rs  field.rs  fields.rs  geometry.rs  gridlines.rs  integrate.rs  iso_surface.rs  lerp.rs  lib.rs  main.rs  marching_squares.rs  mesh2.rs  mesh3.rs  mesh3_io.rs  netbm.rs  paper.rs  polyline.rs  raytracer.rs  remeshing.rs  resolution.rs  sdf.rs  sdf_transform.rs  simplex.rs  skia_utils.rs  time_estimator.rs  uv2xy.rs
src/geometries/: blend.rs  gaussian.rs  heightmap.rs  hole.rs  plane.rs  pulse.rs  sphere.rs  sum.rs  torus.rs  zero.rs
src/tests/: eq.rs  geometries.rs  mod.rs
