[package]
name = "plotter"
version = "0.1.0"
edition = "2021"
default-run = "main"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "animate"
path = "src/bin/animate.rs"

[[bin]]
name = "plasma"
path = "src/bin/plasma.rs"

[dependencies]
svg = "0.17.0"
nalgebra-glm = "0.18.0"
rand = "0.8.5"
rand_distr = "0.4.3"
tiny-skia = "0.11.4"
