[package]
name = "plotter"
version = "0.1.0"
edition = "2021"
default-run = "main"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "animate"
path = "src/bin/animate.rs"

[[bin]]
name = "plasma"
path = "src/bin/plasma.rs"

[[bin]]
name = "valentine2026"
path = "src/bin/valentine2026.rs"

[[bin]]
name = "geometry2mesh"
path = "src/bin/geometry2mesh.rs"

[dependencies]
svg = "0.17.0"
nalgebra-glm = "0.18.0"
rand = "0.8.5"
rand_distr = "0.4.3"
tiny-skia = "0.11.4"
distance-transform = "0.1.2"
